--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <div id="container">
 
-        <div id="welcome-message">You're Invited</div>
+        <div id="welcome-message">You're Invited!</div>
+
+        <div >
+            <img id="happy-picture" src="img/anca-aldo.png"/>
+        </div>
 
         <div id="">Anca and Aldo are very happy to invite you to their wedding party</div>
 
