--- a/index.html
+++ b/index.html
@@ -11,13 +11,31 @@
 
     <div id="container">
 
-        <div id="welcome-message">You're Invited!</div>
+        <div id="welcome-message">IT'S ... WEDDING TIME ;)</div>
 
         <div >
             <img id="happy-picture" src="img/anca-aldo.png"/>
         </div>
 
-        <div id="">Anca and Aldo are very happy to invite you to their wedding party</div>
+        <div id="first-part-of-the-story">
+
+            <p>
+                Anca and Aldo are very happy to invite you to their wedding party
+            </p>
+
+            <br/>
+            <p>
+                <b>Where?</b> <br/>
+                In MEXICO! and ROMANIA!
+            </p>
+
+            <p>
+                <b>When?</b> <br/>
+                In April and August!
+            </p>
+
+
+        </div>
 
     </div>
 
