--- a/index.html
+++ b/index.html
@@ -24,14 +24,19 @@
             </p>
 
             <br/>
+
             <p>
                 <b>Where?</b> <br/>
-                In MEXICO! and ROMANIA!
+                In ROMANIA, near Cluj-Napoca!
             </p>
 
             <p>
                 <b>When?</b> <br/>
                 In April and August!
+            </p>
+
+            <p>
+                <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2">RSVP PLS :)</a>
             </p>
 
 
