--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </p>
 
             <p>
-                <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2">RSVP PLS :)</a>
+                <b>Are you coming?</b> <br/>
+                Please let us <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2"> know</a> ;)
             </p>
 
 
