--- a/index.html
+++ b/index.html
@@ -5,34 +5,61 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Title</title>
+    <title>Anca & Aldo: Wedding Invitation</title>
 </head>
 <body>
 
     <div id="container">
 
-        <div id="welcome-message">IT'S ... WEDDING TIME ;)</div>
+        <p>
+            Dear Friends,
+        </p>
+
+        <div id="welcome-message">
+            Anca & Aldo are madly happy to invite you to celebrate their love and commitment
+        </div>
+
 
         <div >
-            <img id="happy-picture" src="img/anca-aldo.png"/>
+            <img alt="happy aldo and anca" id="happy-picture" src="img/anca-aldo.png"/>
         </div>
 
         <div id="first-part-of-the-story">
 
             <p>
-                Anca and Aldo are very happy to invite you to their wedding party
+                <b>When?</b> <br/>
+                3rd August 2019
             </p>
 
-            <br/>
 
             <p>
                 <b>Where?</b> <br/>
-                In ROMANIA, near Cluj-Napoca!
+                The wonderful
+                <a href="http://www.conaculsecuiesc.ro/en/">
+                    Conacul Secuiesc
+                </a>
+                <br/>
+                near Cluj-Napoca, in Romania
             </p>
 
             <p>
-                <b>When?</b> <br/>
-                In April and August!
+                <b>What's the Plan?</b><br/>
+                The reception will start with a traditional
+                Romanian welcome, at 4pm and will continue with dinner and fun until after midnight.
+
+            </p>
+            <p>
+                <b>But wait, there's even more!</b><br/>
+                The following day we plan a short trip in nature.
+            </p>
+
+            <p>
+                <b>Accommodation at the Venue</b><br/>
+
+                We have reserved all rooms at the venue for overnight, but the number
+                of rooms is limited, so if you want to be hosted at the conac .
+                Please confirm to us if you would like to book a room.
+                There is a limited number of places, so please understand that we will prioritize the ones who answer first.
             </p>
 
             <p>
