--- a/index.html
+++ b/index.html
@@ -11,29 +11,25 @@
 
     <div id="container">
 
-        <p>
-            Dear Friends,
-        </p>
-
         <div id="welcome-message">
             Anca & Aldo are madly happy to invite you to celebrate their love and commitment
         </div>
 
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="img/anca-aldo.png"/>
+            <img alt="happy aldo and anca" id="happy-picture" src="img/in-romania.jpg"/>
         </div>
 
         <div id="first-part-of-the-story">
 
             <p>
-                <b>When?</b> <br/>
+            <div class="little-question">When?</div>
                 3rd August 2019
             </p>
 
 
             <p>
-                <b>Where?</b> <br/>
+                <div class="little-question">Where?</div>
                 The wonderful
                 <a href="http://www.conaculsecuiesc.ro/en/">
                     Conacul Secuiesc
@@ -43,28 +39,33 @@
             </p>
 
             <p>
-                <b>What's the Plan?</b><br/>
+                <div class="little-question">What's the Plan?</div>
                 The reception will start with a traditional
                 Romanian welcome, at 4pm and will continue with dinner and fun until after midnight.
 
             </p>
             <p>
-                <b>But wait, there's even more!</b><br/>
+            <div class="little-question">But wait, there's even more!</div>
                 The following day we plan a short trip in nature.
             </p>
 
             <p>
-                <b>Accommodation at the Venue</b><br/>
+            <div class="little-question">Accommodation at the Venue</div>
 
                 We have reserved all rooms at the venue for overnight, but the number
-                of rooms is limited, so if you want to be hosted at the conac .
-                Please confirm to us if you would like to book a room.
-                There is a limited number of places, so please understand that we will prioritize the ones who answer first.
+                of rooms is limited, so if you want to be hosted at the conac confirm to us
+                below.
+                <!--There is a limited number of places, so please understand that we will prioritize the ones who answer first.-->
             </p>
 
             <p>
-                <b>Are you coming?</b> <br/>
-                Please let us <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2"> know</a> ;)
+            <div class="little-question">Are you coming?</div>
+                Please let us <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2"> know</a>
+                </br>
+                before <b>June 1st</b>
+                if you're in ;)
+                <br/>
+
             </p>
 
 
