--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="little-question">Accommodation at the Venue</div>
 
                 We have reserved all rooms at the venue for overnight, but the number
-                of rooms is limited, so if you want to be hosted at the conac confirm to us
+                of rooms is limited, so if you want to be hosted at the "conac" confirm to us
                 below.
                 <!--There is a limited number of places, so please understand that we will prioritize the ones who answer first.-->
             </p>
