--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <p>
             <div class="little-question">Are you coming?</div>
-                Please let us <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2"> know</a>
+                Please <a href="https://goo.gl/forms/f5c9NqfifwK8iBtq2"> confirm</a>
                 </br>
                 before <b>June 1st</b>
                 if you're in ;)
