--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>
                 <div class="little-question">Where?</div>
                 The wonderful
-                <a href="http://www.conaculsecuiesc.ro/en/">
+                <a target="_blank" href="http://www.conaculsecuiesc.ro/en/">
                     Conacul Secuiesc
                 </a>
                 <br/>
