--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <p>
                 <div class="little-question">Where?</div>
                 The wonderful
-                <a target="_blank" href="http://www.conaculsecuiesc.ro/en/">
                     Conacul Secuiesc
-                </a>
+                    (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">web</a> | 
+                    <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2"></a>
                 <br/>
                 near Cluj-Napoca, in Romania
             </p>
