--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 The wonderful
                     Conacul Secuiesc
                     (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">web</a> | 
-                    <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2"></a>
+                    <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2">map</a>)
                 <br/>
                 near Cluj-Napoca, in Romania
             </p>
