--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <p>
                 <div class="little-question">Where?</div>
-                The wonderful
-                    Conacul Secuiesc
+                The wonderful 
+                    Conacul Secuiesc<br/>
                     (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">web</a> | 
                     <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2">map</a>)
                 <br/>
