--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                 <div class="little-question">Where?</div>
                 The wonderful 
                     Conacul Secuiesc<br/>
-                    (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">web</a> | 
-                    <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2">map</a>)
-                <br/>
                 near Cluj-Napoca, in Romania
+                <small>
+                    (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">website</a> | 
+                    <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2">map</a>)
+                </small>
+                <br/>
+        
             </p>
 
             <p>
