--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="little-question">Where?</div>
                 The wonderful 
                     Conacul Secuiesc<br/>
-                near Cluj-Napoca, in Romania
+                near Cluj-Napoca, in Romania<br/>
                 <small>
                     (<a target="_blank" href="http://www.conaculsecuiesc.ro/en/">website</a> | 
                     <a target="_blank" href="https://goo.gl/maps/NzQBFHmMVdH2">map</a>)
