--- a/mexico/en/index.html
+++ b/mexico/en/index.html
@@ -12,7 +12,7 @@
     <div id="container">
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/cacti-bottom-up.png"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/cacti-bottom-up.png"/>
         </div>
 
         <div class="dears">
@@ -25,10 +25,15 @@
 
                 If you are in this webpage is because you have answered in the survey that you will join
                 us in our marriage celebration this 27th of April in Lerdo, Mexico.
+
+
+                <br/><br/>
                 We are almost one month away from our wedding and we would appreciate if
                 you could help us once again by <a target=_blank href="https://goo.gl/forms/hQaSPrX2ND0TiPT93">confirming</a>
                 your attendance to the event.
-                <br/><br/>Those who don't confirm will not get dinner ehh :P
+
+                <br/><br/>
+                (Those who don't confirm will not get dinner ehh :P)
 
                 <br/><br/>
 
@@ -39,16 +44,20 @@
 
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/02_English_page1.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/02_English_page1.jpg"/>
         </div>
 
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/03_English_page2.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/03_English_page2.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/06_Map.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/06_Map.jpg"/>
+        </div>
+
+        <div >
+            <img alt="happy aldo and anca" id="happy-picture" src="../../img/esperamos.png"/>
         </div>
 
     </div>
