--- a/mexico/es/index.html
+++ b/mexico/es/index.html
@@ -12,7 +12,7 @@
     <div id="container">
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/cacti-bottom-up.png"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/cacti-bottom-up.png"/>
         </div>
 
         <div class="dears">
@@ -36,21 +36,25 @@
         </div>
 
 
+        <div >
+            <img alt="happy aldo and anca" class="mexicopicture" src="../img/01_Intro_Right.jpg"/>
+        </div>
+
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/04_Spanish_page1_narrow.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/04_Spanish_page1_narrow.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/05_Spanish_page2.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/05_Spanish_page2.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/06_Map.jpg"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/06_Map.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/esperamos.png"/>
+            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/esperamos.png"/>
         </div>
 
     </div>
