--- a/mexico/index.html
+++ b/mexico/index.html
@@ -13,17 +13,14 @@
 
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../img/01_Intro_Right.jpg"/>
+            <img alt="happy aldo and anca" id="mainmexicopicture" src="../img/01_Intro_Right.jpg"/>
         </div>
-        
+
         <div class="dears">
-            <a href="en/index.html">🇬🇧 English</a>
+            <a href="en/index.html">🇬🇧 English</a> &nbsp; <a href="es/index.html">🇲🇽 Spanish</a>
         </div>
 
 
-        <div class="dears">
-            <a href="es/index.html">🇲🇽 Spanish</a>
-        </div>
 
 
 
