--- a/mexico/en/index.html
+++ b/mexico/en/index.html
@@ -44,20 +44,20 @@
 
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/02_English_page1.jpg"/>
+            <img  class="mexicopicture"  src="../../img/02_English_page1.jpg"/>
         </div>
 
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/03_English_page2.jpg"/>
+            <img  class="mexicopicture"  src="../../img/03_English_page2.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture"  src="../../img/06_Map.jpg"/>
+            <img class="mexicopicture"  src="../../img/06_Map.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" id="happy-picture" src="../../img/esperamos.png"/>
+            <img class="mexicopicture" src="../../img/esperamos.png"/>
         </div>
 
     </div>
