--- a/mexico/es/index.html
+++ b/mexico/es/index.html
@@ -37,24 +37,24 @@
 
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture" src="../img/01_Intro_Right.jpg"/>
+            <img  class="mexicopicture" src="../img/01_Intro_Right.jpg"/>
         </div>
 
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/04_Spanish_page1_narrow.jpg"/>
+            <img  class="mexicopicture" src="../../img/04_Spanish_page1_narrow.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/05_Spanish_page2.jpg"/>
+            <img  class="mexicopicture" src="../../img/05_Spanish_page2.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/06_Map.jpg"/>
+            <img  class="mexicopicture" src="../../img/06_Map.jpg"/>
         </div>
 
         <div >
-            <img alt="happy aldo and anca" class="mexicopicture" src="../../img/esperamos.png"/>
+            <img class="mexicopicture" src="../../img/esperamos.png"/>
         </div>
 
     </div>
