--- a/mexico/index.html
+++ b/mexico/index.html
@@ -17,10 +17,10 @@
         </div>
 
         <div class="dears">
-            <a href="en/index.html">🇬🇧 English</a> &nbsp; <a href="es/index.html">🇲🇽 Spanish</a>
+            <a href="en/index.html">🇬🇧 English</a> &nbsp; <a href="es/index.html">🇲🇽 Español</a>
         </div>
 
-        
+
 
     </div>
 
